More ECF 5 stuff; a whole lot of it